# Ongaku

./: CMakeLists.txt  qml.qrc
android/: AndroidManifest.xml
src/core/base/player/: player.cpp  player.h
src/core/base/song/: metadata.h  song.h
src/core/launcher/: launcher.cpp  launcher.h
src/core/platform/android/: permission_manager.cpp  permission_manager.h
src/main/: main.cpp
src/media/audio_player/: audio_player.cpp  audio_player.h
src/song_list_model/: song_list_model.cpp  song_list_model.h
src/song_queue/: song_queue.cpp  song_queue.h
src/utils/type_info_name/: type_info_name.h
ui/: ongaku.qml
